--- a/data/season2017-18.json
+++ b/data/season2017-18.json
@@ -11783,20 +11783,20 @@
     {
         "date": "2018-04-22",
         "gameType": "P",
-        "resultType": "TBD",
+        "resultType": "REG",
         "homeTeam": "Philadelphia Flyers",
         "awayTeam": "Pittsburgh Penguins",
-        "homeGoals": 0,
-        "awayGoals": 0
+        "homeGoals": 5,
+        "awayGoals": 8
     },
     {
         "date": "2018-04-22",
         "gameType": "P",
-        "resultType": "TBD",
+        "resultType": "REG",
         "homeTeam": "Colorado Avalanche",
         "awayTeam": "Nashville Predators",
         "homeGoals": 0,
-        "awayGoals": 0
+        "awayGoals": 5
     },
     {
         "date": "2018-04-23",
@@ -11813,24 +11813,6 @@
         "resultType": "TBD",
         "homeTeam": "Columbus Blue Jackets",
         "awayTeam": "Washington Capitals",
-        "homeGoals": 0,
-        "awayGoals": 0
-    },
-    {
-        "date": "2018-04-24",
-        "gameType": "P",
-        "resultType": "TBD",
-        "homeTeam": "Pittsburgh Penguins",
-        "awayTeam": "Philadelphia Flyers",
-        "homeGoals": 0,
-        "awayGoals": 0
-    },
-    {
-        "date": "2018-04-24",
-        "gameType": "P",
-        "resultType": "TBD",
-        "homeTeam": "Nashville Predators",
-        "awayTeam": "Colorado Avalanche",
         "homeGoals": 0,
         "awayGoals": 0
     },
