--- a/data/season2017-18.json
+++ b/data/season2017-18.json
@@ -11828,19 +11828,19 @@
     {
         "date": "2018-04-26",
         "gameType": "P",
-        "resultType": "TBD",
+        "resultType": "REG",
         "homeTeam": "Washington Capitals",
         "awayTeam": "Pittsburgh Penguins",
-        "homeGoals": 0,
-        "awayGoals": 0
+        "homeGoals": 2,
+        "awayGoals": 3
     },
     {
         "date": "2018-04-26",
         "gameType": "P",
-        "resultType": "TBD",
+        "resultType": "REG",
         "homeTeam": "Vegas Golden Knights",
         "awayTeam": "San Jose Sharks",
-        "homeGoals": 0,
+        "homeGoals": 7,
         "awayGoals": 0
     },
     {
