--- a/data/season2017-18.json
+++ b/data/season2017-18.json
@@ -11846,11 +11846,11 @@
     {
         "date": "2018-04-27",
         "gameType": "P",
-        "resultType": "TBD",
+        "resultType": "REG",
         "homeTeam": "Nashville Predators",
         "awayTeam": "Winnipeg Jets",
-        "homeGoals": 0,
-        "awayGoals": 0
+        "homeGoals": 1,
+        "awayGoals": 4
     },
     {
         "date": "2018-04-28",
