--- a/data/season2017-18.json
+++ b/data/season2017-18.json
@@ -11873,20 +11873,20 @@
     {
         "date": "2018-04-29",
         "gameType": "P",
-        "resultType": "TBD",
+        "resultType": "REG",
         "homeTeam": "Washington Capitals",
         "awayTeam": "Pittsburgh Penguins",
-        "homeGoals": 0,
-        "awayGoals": 0
+        "homeGoals": 4,
+        "awayGoals": 1
     },
     {
         "date": "2018-04-29",
         "gameType": "P",
-        "resultType": "TBD",
+        "resultType": "2OT",
         "homeTeam": "Nashville Predators",
         "awayTeam": "Winnipeg Jets",
-        "homeGoals": 0,
-        "awayGoals": 0
+        "homeGoals": 5,
+        "awayGoals": 4
     },
     {
         "date": "2018-04-30",
